--- a/tracker/package.json
+++ b/tracker/package.json
@@ -34,6 +34,10 @@
     "nodemon": "^2.0.2",
     "rimraf": "^3.0.2",
     "ts-node": "^8.8.2",
-    "ua-parser-js": "^0.7.21"
+    "ua-parser-js": "^0.7.21",
+    "universal-analytics": "^0.4.20"
+  },
+  "devDependencies": {
+    "@types/universal-analytics": "^0.4.4"
   }
 }
