--- a/.eslintrc
+++ b/.eslintrc
@@ -68,7 +68,7 @@
             }
         ],
         "class-methods-use-this": [
-            "error",
+            "warn",
             {
                 "exceptMethods": [
                     "authorizationParams"
