--- a/server/package.json
+++ b/server/package.json
@@ -39,6 +39,7 @@
     "@types/passport-local": "^1.0.33",
     "@types/passport-naver": "^0.2.0",
     "@types/passport-oauth2": "^1.4.8",
+    "@types/request": "^2.48.4",
     "@types/swagger-jsdoc": "^3.0.2",
     "@types/swagger-ui-express": "^4.1.1",
     "@types/ua-parser-js": "^0.7.33",
@@ -46,8 +47,8 @@
     "jest": "^25.1.0",
     "nodemon": "^2.0.2",
     "rimraf": "^3.0.2",
-    "ts-node": "^8.6.2",
     "ts-jest": "^25.3.1",
+    "ts-node": "^8.6.2",
     "typescript": "^3.8.2"
   },
   "dependencies": {
@@ -81,6 +82,7 @@
     "passport-naver": "^1.0.6",
     "passport-oauth2": "^1.5.0",
     "passport-twitch-new": "^0.0.1",
+    "request": "^2.88.2",
     "swagger-jsdoc": "^3.5.0",
     "swagger-ui-express": "^4.1.3",
     "ts-loader": "^6.2.1",
