--- a/.github/workflows/push-calculator-ecs.yml
+++ b/.github/workflows/push-calculator-ecs.yml
@@ -2,7 +2,7 @@ on:
   push:
     branches: [master]
     paths:
-      - 'calculator/**'
+      - "calculator/**"
 
 name: Deploy to Amazon ECS - "calculator"
 
