--- a/.github/workflows/push-chatbot-twitch-ecs.yml
+++ b/.github/workflows/push-chatbot-twitch-ecs.yml
@@ -22,6 +22,13 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ap-northeast-2
 
+      - name: TS Build
+        run: |
+          cd chatbot-twitch
+          yarn
+          yarn build
+          cd -
+
       - name: Build, tag, and push image to Docker Hub
         uses: elgohr/Publish-Docker-Github-Action@2.14
         with:
