dockerfile timezone 변경 추가

--- a/socket/Dockerfile
+++ b/socket/Dockerfile
@@ -1,5 +1,10 @@
 FROM node:12.16.1-alpine
 ENV NODE_ENV production
+
+# timezone 설정
+ENV TZ=Asia/Seoul
+RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone
+
 RUN mkdir -p /home/onad_socket
 WORKDIR /home/onad_socket
 ADD . /home/onad_socket
