path 제한 임시 삭제

--- a/.github/workflows/push-calculator-ecs.yml
+++ b/.github/workflows/push-calculator-ecs.yml
@@ -1,8 +1,8 @@
 on:
   push:
     branches: [master]
-    paths:
-      - "calculator/**"
+    # paths:
+    #   - "calculator/**"
 
 name: Deploy to Amazon ECS - "calculator"
 
