--- a/.github/workflows/push-server-ecs.yml
+++ b/.github/workflows/push-server-ecs.yml
@@ -43,7 +43,7 @@ jobs:
         uses: aws-actions/amazon-ecs-render-task-definition@v1
         with:
           task-definition: server/task-definition.json
-          container-name: onad_web_api
+          container-name: onad-web-api
           image: ${{ secrets.DOCKER_USERNAME }}/onad_web_api:${{ github.sha }}
 
       - name: Deploy Amazon ECS task definition
