--- a/.github/workflows/push-server-ecs.yml
+++ b/.github/workflows/push-server-ecs.yml
@@ -1,8 +1,8 @@
 on:
   push:
     branches: [master]
-    # paths:
-    #   - "server/**"
+    paths:
+      - "server/**"
 
 name: Deploy to Amazon ECS - "server"
 
