calculator 변경, client-ts workflow path 설정

--- a/.github/workflows/push-client-ts-ecs.yml
+++ b/.github/workflows/push-client-ts-ecs.yml
@@ -1,8 +1,8 @@
 on:
   push:
     branches: [master]
-    # paths:
-    #   - "client-ts/**"
+    paths:
+      - "client-ts/**"
 
 name: Deploy to Amazon ECS - "client-ts"
 
