--- a/server/package.json
+++ b/server/package.json
@@ -67,6 +67,8 @@
     "express-mysql-session": "^2.1.3",
     "express-session": "^1.17.0",
     "geoip-lite": "^1.4.0",
+    "google-auth-library": "^6.0.0",
+    "googleapis": "^51.0.0",
     "helmet": "^3.21.2",
     "http-error": "0.0.6",
     "http-errors": "^1.7.3",
