--- a/adpick-crawl/package.json
+++ b/adpick-crawl/package.json
@@ -7,6 +7,7 @@
     "start": "ts-node ./src/main.ts",
     "start:debug": "tsc -w",
     "start:production": "node ./dist/main.js",
+    "prebuild": "rimraf dist",
     "build": "tsc"
   },
   "dependencies": {
@@ -14,6 +15,7 @@
     "axios": "^0.19.2",
     "dotenv": "^8.2.0",
     "mysql": "^2.18.1",
+    "rimraf": "^3.0.2",
     "ts-node": "^8.10.0",
     "typeorm": "^0.2.24",
     "typescript": "^3.8.3"
