--- a/adpage-ts/nginx.conf
+++ b/adpage-ts/nginx.conf
@@ -1,7 +1,7 @@
 server {
-    root /var/www/l.onad.io;
+    root /var/www/cpa.onad.io;
     index index.html;
-    server_name l.onad.io;
+    server_name cpa.onad.io;
     location / {
         try_files $uri /index.html;
     }
