[UPDATE #7.3] dockerfile 변경

--- a/adpage-ts/Dockerfile
+++ b/adpage-ts/Dockerfile
@@ -1,7 +1,7 @@
 FROM nginx:1.14.2-alpine
 
-COPY ./build /var/www/l.onad.io
-COPY ./nginx.conf /etc/nginx/conf.d/l.onad.io.conf
+COPY ./build /var/www/cpa.onad.io
+COPY ./nginx.conf /etc/nginx/conf.d/cpa.onad.io.conf
 ENV NODE_ENV production
 
 EXPOSE 3011
