test 서버 pr check action 추가

--- a/.github/workflows/test-push-tracker-ecs.yml
+++ b/.github/workflows/test-push-tracker-ecs.yml
@@ -8,7 +8,7 @@ name: <test> Deploy to Amazon ECS - "tracker"
 
 jobs:
   deploy:
-    name: Deploy
+    name: Test Deploy
     runs-on: ubuntu-latest
 
     steps:
