--- a/.github/workflows/test-push-client-ts-ecs.yml
+++ b/.github/workflows/test-push-client-ts-ecs.yml
@@ -8,7 +8,7 @@ name: <test> Deploy to Amazon ECS - "client-ts"
 
 jobs:
   deploy:
-    name: Deploy
+    name: Test Deploy
     runs-on: ubuntu-latest
 
     steps:
@@ -32,7 +32,7 @@ jobs:
           REACT_APP_REACT_HOSTNAME: ${{ secrets.REACT_APP_TEST_REACT_HOSTNAME }}
           REACT_APP_API_HOSTNAME: ${{ secrets.REACT_APP_TEST_API_HOSTNAME }}
           REACT_APP_GOOGLE_MAP_API_KEY: ${{ secrets.REACT_APP_GOOGLE_MAP_API_KEY }}
-          
+
       - name: Build, tag, and push image to Docker Hub
         uses: elgohr/Publish-Docker-Github-Action@2.14
         with:
