--- a/.github/workflows/test-push-socket-ecs.yml
+++ b/.github/workflows/test-push-socket-ecs.yml
@@ -8,7 +8,7 @@ name: <test> Deploy to Amazon ECS - "socket"
 
 jobs:
   deploy:
-    name: Deploy
+    name: Test Deploy
     runs-on: ubuntu-latest
 
     steps:
