--- a/.github/workflows/push-client-ts-ecs.yml
+++ b/.github/workflows/push-client-ts-ecs.yml
@@ -32,7 +32,6 @@ jobs:
           REACT_APP_REACT_HOSTNAME: ${{ secrets.REACT_APP_PRODUCTION_REACT_HOSTNAME }}
           REACT_APP_API_HOSTNAME: ${{ secrets.REACT_APP_PRODUCTION_API_HOSTNAME }}
           REACT_APP_GOOGLE_MAP_API_KEY: ${{ secrets.REACT_APP_GOOGLE_MAP_API_KEY }}
-          
 
       - name: Build, tag, and push image to Docker Hub
         uses: elgohr/Publish-Docker-Github-Action@2.14
@@ -41,7 +40,7 @@ jobs:
           name: ${{ secrets.DOCKER_USERNAME }}/onad_web
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-          tags: ${{ github.sha }}
+          tags: "${{ github.sha }},latest"
 
       - name: Fill in the new image ID in the Amazon ECS task definition
         id: task-def
