add Python installation on test pr check workflow

--- a/.github/workflows/pr-check-test.yml
+++ b/.github/workflows/pr-check-test.yml
@@ -13,6 +13,11 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v1
 
+      - name: Set up python3
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.x
+
       - name: CDK Diff
         uses: scottbrenner/aws-cdk-action@master
         with:
