--- a/adpick-tracking-crawl/Dockerfile
+++ b/adpick-tracking-crawl/Dockerfile
@@ -6,6 +6,9 @@ ENV LC_ALL=C.UTF-8
 ENV TZ=Asia/Seoul
 RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone
 
+# pip upgrade
+RUN python -m pip install --upgrade pip
+
 RUN wget -q -O - https://dl-ssl.google.com/linux/linux_signing_key.pub | apt-key add -
 RUN sh -c 'echo "deb [arch=amd64] http://dl.google.com/linux/chrome/deb/ stable main" >> /etc/apt/sources.list.d/google.list'
 RUN apt-get -y update
