--- a/.github/workflows/push-adpick-tracking-crawl-ecs.yml
+++ b/.github/workflows/push-adpick-tracking-crawl-ecs.yml
@@ -2,9 +2,9 @@ on:
   push:
     branches: [master]
     paths:
-      - "adpick-crawl/**"
+      - "adpick-tracking-crawl/**"
 
-name: Deploy to Amazon ECS - "adpick-crawl"
+name: Deploy to Amazon ECS - "adpick-tracking-crawl"
 
 jobs:
   deploy:
@@ -24,7 +24,7 @@ jobs:
 
       - name: TS Build
         run: |
-          cd adpick-crawl
+          cd adpick-tracking-crawl
           yarn
           yarn build
           cd -
@@ -32,8 +32,8 @@ jobs:
       - name: Build, tag, and push image to Docker Hub
         uses: elgohr/Publish-Docker-Github-Action@2.14
         with:
-          workdir: adpick-crawl
-          name: ${{ secrets.DOCKER_USERNAME }}/onad-adpick-crawl
+          workdir: adpick-tracking-crawl
+          name: ${{ secrets.DOCKER_USERNAME }}/onad-adpick-tracking-crawl
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
           tags: "${{ github.sha }},latest"
@@ -42,9 +42,9 @@ jobs:
         id: task-def
         uses: aws-actions/amazon-ecs-render-task-definition@v1
         with:
-          task-definition: adpick-crawl/task-definition.json
-          container-name: onad-adpick-crawl
-          image: ${{ secrets.DOCKER_USERNAME }}/onad-adpick-crawl:${{ github.sha }}
+          task-definition: adpick-tracking-crawl/task-definition.json
+          container-name: onad-adpick-tracking-crawl
+          image: ${{ secrets.DOCKER_USERNAME }}/onad-adpick-tracking-crawl:${{ github.sha }}
 
       - name: Deploy Amazon ECS task definition
         uses: airfordable/ecs-deploy-task-definition-to-scheduled-task@v2.0.0
