휴면계정 메일러 깃이그노어

--- a/.gitignore
+++ b/.gitignore
@@ -66,3 +66,6 @@ node_websocket/public/requestImgSync.js
 node_websocket/requestImgSync.js
 node_websocket/views/browsercheck.ejs
 et --hard commit_id
+
+# tmp 
+sleepAccount/
