--- a/client-ts/package.json
+++ b/client-ts/package.json
@@ -16,6 +16,7 @@
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.44",
     "@material-ui/pickers": "^3.2.10",
+    "@types/recharts": "^1.8.14",
     "axios": "^0.19.2",
     "chart.js": "^2.9.3",
     "chartjs-plugin-colorschemes": "^0.4.0",
@@ -41,10 +42,10 @@
     "react-swipeable-views": "^0.13.9",
     "react-swipeable-views-utils": "^0.13.9",
     "react-tooltip": "^4.0.3",
-    "recharts": "^2.0.0-beta.1",
+    "recharts": "^1.8.5",
     "recompose": "^0.30.0",
     "shortid": "^2.2.15",
-    "typescript": "~3.7.2"
+    "typescript": "3.8"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^4.2.4",
@@ -71,7 +72,6 @@
     "@types/react-swipeable-views": "^0.13.0",
     "@types/react-swipeable-views-utils": "^0.13.1",
     "@types/react-tooltip": "^3.11.0",
-    "@types/recharts": "^1.8.5",
     "@types/recompose": "^0.30.7",
     "@types/shortid": "^0.0.29"
   },
