--- a/client-ts/package.json
+++ b/client-ts/package.json
@@ -16,7 +16,6 @@
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.44",
     "@material-ui/pickers": "^3.2.10",
-    "@types/recharts": "^1.8.14",
     "axios": "^0.19.2",
     "chart.js": "^2.9.3",
     "chartjs-plugin-colorschemes": "^0.4.0",
@@ -29,7 +28,6 @@
     "jspdf": "^1.5.3",
     "material-table": "^1.57.2",
     "react": "^16.12.0",
-    "react-bootstrap": "^1.0.0-beta.16",
     "react-calendar-heatmap": "^1.8.1",
     "react-chartjs-2": "^2.9.0",
     "react-countup": "^4.3.3",
@@ -45,7 +43,7 @@
     "recharts": "^1.8.5",
     "recompose": "^0.30.0",
     "shortid": "^2.2.15",
-    "typescript": "3.8"
+    "typescript": "~3.7.2"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^4.2.4",
@@ -63,7 +61,6 @@
     "@types/markerclustererplus": "^2.1.33",
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
-    "@types/react-bootstrap": "^0.32.20",
     "@types/react-calendar-heatmap": "^1.6.2",
     "@types/react-chartjs-2": "^2.5.7",
     "@types/react-countup": "^4.0.1",
@@ -72,6 +69,7 @@
     "@types/react-swipeable-views": "^0.13.0",
     "@types/react-swipeable-views-utils": "^0.13.1",
     "@types/react-tooltip": "^3.11.0",
+    "@types/recharts": "^1.8.14",
     "@types/recompose": "^0.30.7",
     "@types/shortid": "^0.0.29"
   },
