--- a/client-ts/package.json
+++ b/client-ts/package.json
@@ -26,8 +26,9 @@
     "html2canvas": "^1.0.0-rc.5",
     "jquery": "^3.4.1",
     "jspdf": "^1.5.3",
-    "material-table": "^1.57.2",
+    "material-table": "^1.65.0",
     "react": "^16.12.0",
+    "react-bootstrap": "^1.0.0-beta.16",
     "react-calendar-heatmap": "^1.8.1",
     "react-chartjs-2": "^2.9.0",
     "react-countup": "^4.3.3",
@@ -40,7 +41,7 @@
     "react-swipeable-views": "^0.13.9",
     "react-swipeable-views-utils": "^0.13.9",
     "react-tooltip": "^4.0.3",
-    "recharts": "^1.8.5",
+    "recharts": "^2.0.0-beta.1",
     "recompose": "^0.30.0",
     "shortid": "^2.2.15",
     "typescript": "~3.7.2"
@@ -61,6 +62,7 @@
     "@types/markerclustererplus": "^2.1.33",
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
+    "@types/react-bootstrap": "^0.32.20",
     "@types/react-calendar-heatmap": "^1.6.2",
     "@types/react-chartjs-2": "^2.5.7",
     "@types/react-countup": "^4.0.1",
@@ -69,7 +71,7 @@
     "@types/react-swipeable-views": "^0.13.0",
     "@types/react-swipeable-views-utils": "^0.13.1",
     "@types/react-tooltip": "^3.11.0",
-    "@types/recharts": "^1.8.14",
+    "@types/recharts": "^1.8.5",
     "@types/recompose": "^0.30.7",
     "@types/shortid": "^0.0.29"
   },
