--- a/client-ts/package.json
+++ b/client-ts/package.json
@@ -41,10 +41,10 @@
     "react-swipeable-views": "^0.13.9",
     "react-swipeable-views-utils": "^0.13.9",
     "react-tooltip": "^4.0.3",
-    "recharts": "^2.0.0-beta.1",
+    "recharts": "1.8.5",
     "recompose": "^0.30.0",
     "shortid": "^2.2.15",
-    "typescript": "~3.7.2"
+    "typescript": "3.9.7"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^4.2.4",
