--- a/client-ts/package.json
+++ b/client-ts/package.json
@@ -26,7 +26,7 @@
     "html2canvas": "^1.0.0-rc.5",
     "jquery": "^3.4.1",
     "jspdf": "^1.5.3",
-    "material-table": "^1.65.0",
+    "material-table": "1.57.2",
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.16",
     "react-calendar-heatmap": "^1.8.1",
