--- a/client-ts/package.json
+++ b/client-ts/package.json
@@ -27,6 +27,7 @@
     "jquery": "^3.4.1",
     "jspdf": "^1.5.3",
     "material-table": "1.57.2",
+    "moment": "^2.29.1",
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.16",
     "react-calendar-heatmap": "^1.8.1",
