--- a/server/package.json
+++ b/server/package.json
@@ -40,6 +40,7 @@
     "@types/passport-naver": "^0.2.0",
     "@types/passport-oauth2": "^1.4.8",
     "@types/request": "^2.48.4",
+    "@types/shortid": "^0.0.29",
     "@types/swagger-jsdoc": "^3.0.2",
     "@types/swagger-ui-express": "^4.1.1",
     "@types/ua-parser-js": "^0.7.33",
@@ -85,6 +86,7 @@
     "passport-oauth2": "^1.5.0",
     "passport-twitch-new": "^0.0.1",
     "request": "^2.88.2",
+    "shortid": "^2.2.16",
     "swagger-jsdoc": "^3.5.0",
     "swagger-ui-express": "^4.1.3",
     "ts-loader": "^6.2.1",
