아프리카 연동 다이얼로그 스낵바 추가, 크롤러 설정 변경 + docker 빌드 설정 변경

--- a/afreeca-link-note-crawl/Dockerfile
+++ b/afreeca-link-note-crawl/Dockerfile
@@ -10,6 +10,10 @@ FROM python:3.8-slim-buster
 
 LABEL Name=afreeca_link_note_crawler Version=0.0.3
 
+# timezone 설정
+ENV TZ=Asia/Seoul
+RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone
+# env 설정
 ENV PYTHON_ENV production
 
 WORKDIR /app
