--- a/client-ts/package.json
+++ b/client-ts/package.json
@@ -13,6 +13,7 @@
     "@date-io/date-fns": "^1.3.13",
     "@google/markerclusterer": "^2.0.6",
     "@material-ui/core": "^4.9.4",
+    "@material-ui/data-grid": "^4.0.0-alpha.17",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.44",
     "@material-ui/pickers": "^3.2.10",
