--- a/client-ts/package.json
+++ b/client-ts/package.json
@@ -7,7 +7,7 @@
     "start": "set PORT=3001 && react-scripts start",
     "build": "NODE_ENV=production GENERATE_SOURCEMAP=false react-scripts build",
     "test": "react-scripts test --coverage --detectOpenHandles --forceExit --passWithNoTests",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
   },
   "dependencies": {
     "@date-io/date-fns": "^1.3.13",
