Update: 아프리카쪽지크롤러 workflow 업데이트

--- a/.github/workflows/push-afreeca-link-note-ecs.yml
+++ b/.github/workflows/push-afreeca-link-note-ecs.yml
@@ -36,7 +36,7 @@ jobs:
         uses: aws-actions/amazon-ecs-render-task-definition@v1
         with:
           task-definition: afreeca-link-note-crawl/task-definition.json
-          container-name: afreeca-link-note-crawl
+          container-name: onad-afreeca-link-note-crawl
           image: ${{ secrets.DOCKER_USERNAME }}/afreeca-link-note-crawl:${{ github.sha }}
 
       - name: Deploy Amazon ECS task definition
