--- a/client-ts/package.json
+++ b/client-ts/package.json
@@ -17,6 +17,7 @@
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.44",
     "@material-ui/pickers": "^3.2.10",
+    "aws-sdk": "^2.859.0",
     "axios": "^0.19.2",
     "chart.js": "^2.9.3",
     "chartjs-plugin-colorschemes": "^0.4.0",
@@ -35,6 +36,7 @@
     "react-calendar-heatmap": "^1.8.1",
     "react-chartjs-2": "^2.9.0",
     "react-countup": "^4.3.3",
+    "react-daum-postcode": "^2.0.4",
     "react-dom": "^16.12.0",
     "react-google-maps": "^9.4.5",
     "react-markdown": "^4.3.1",
