--- a/client-ts/package.json
+++ b/client-ts/package.json
@@ -28,6 +28,7 @@
     "html2canvas": "^1.0.0-rc.5",
     "jquery": "^3.4.1",
     "jspdf": "^1.5.3",
+    "loadsh": "^0.0.4",
     "material-table": "1.57.2",
     "moment": "^2.29.1",
     "node-sass": "4.14.1",
@@ -78,6 +79,7 @@
     "@types/jest": "^24.0.0",
     "@types/jquery": "^3.3.33",
     "@types/jspdf": "^1.3.3",
+    "@types/lodash": "^4.14.168",
     "@types/markerclustererplus": "^2.1.33",
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
