Add: 광고주 대시보드 상품판매 차트 생성

--- a/client-ts/package.json
+++ b/client-ts/package.json
@@ -28,7 +28,7 @@
     "html2canvas": "^1.0.0-rc.5",
     "jquery": "^3.4.1",
     "jspdf": "^1.5.3",
-    "loadsh": "^0.0.4",
+    "lodash": "^4.17.21",
     "material-table": "1.57.2",
     "moment": "^2.29.1",
     "node-sass": "4.14.1",
