--- a/api/tsconfig.json
+++ b/api/tsconfig.json
@@ -7,11 +7,15 @@
     "experimentalDecorators": true,
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
+    "skipLibCheck": true,
     "target": "es2017",
     "sourceMap": true,
     "outDir": "./dist",
     "baseUrl": "./",
     "incremental": true,
     "moduleResolution": "node",
+    "compilerOptions": {
+      "typeRoots": ["./node_modules/@types","./@types"], 
+   }
   }
 }
