Add: prettier 강화 룰 적용

--- a/api/tsconfig.json
+++ b/api/tsconfig.json
@@ -14,8 +14,9 @@
     "baseUrl": "./",
     "incremental": true,
     "moduleResolution": "node",
-    "compilerOptions": {
-      "typeRoots": ["./node_modules/@types","./@types"], 
-   }
+    "typeRoots": [
+      "./node_modules/@types",
+      "./@types"
+    ],
   }
 }
