--- a/api/package.json
+++ b/api/package.json
@@ -34,6 +34,7 @@
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
+    "csurf": "^1.11.0",
     "express": "^4.17.1",
     "express-mysql-session": "^2.1.6",
     "express-session": "^1.17.2",
@@ -57,6 +58,7 @@
     "@nestjs/testing": "^7.6.17",
     "@types/cookie-parser": "^1.4.2",
     "@types/cors": "^2.8.10",
+    "@types/csurf": "^1.11.1",
     "@types/express": "^4.17.11",
     "@types/express-session": "^1.17.3",
     "@types/jest": "26.0.10",
