Add: 로그인 및 연동 관련 코드 리라이팅 완료 but 테스트 필요 자세한사항은 노션 @아키텍처 설계 미흡

--- a/client-ts/package.json
+++ b/client-ts/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "start:mac": "PORT=3001 react-scripts start",
+    "start:mac": "PORT=3001 SKIP_PREFLIGHT_CHECK=true react-scripts start",
     "start": "set PORT=3001 && react-scripts start",
     "build": "NODE_ENV=production GENERATE_SOURCEMAP=false react-scripts build",
     "test": "react-scripts test --coverage --detectOpenHandles --forceExit --passWithNoTests",
