--- a/api/package.json
+++ b/api/package.json
@@ -29,12 +29,12 @@
     "@nestjs/passport": "^7.1.5",
     "@nestjs/platform-express": "^7.6.17",
     "@nestjs/typeorm": "^7.1.5",
+    "@types/shortid": "^0.0.29",
     "axios": "^0.21.1",
     "chalk": "^4.1.1",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
-    "csurf": "^1.11.0",
     "express": "^4.17.1",
     "express-mysql-session": "^2.1.6",
     "express-session": "^1.17.2",
@@ -50,6 +50,7 @@
     "request": "^2.88.2",
     "rimraf": "^3.0.2",
     "rxjs": "^6.5.4",
+    "shortid": "^2.2.16",
     "typeorm": "^0.2.32"
   },
   "devDependencies": {
@@ -58,7 +59,6 @@
     "@nestjs/testing": "^7.6.17",
     "@types/cookie-parser": "^1.4.2",
     "@types/cors": "^2.8.10",
-    "@types/csurf": "^1.11.1",
     "@types/express": "^4.17.11",
     "@types/express-session": "^1.17.3",
     "@types/jest": "26.0.10",
