--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "devDependencies": {
+    "@types/passport-kakao": "^0.2.0",
+    "@types/passport-naver": "^0.2.0",
     "@typescript-eslint/eslint-plugin": "^4.0.0",
     "@typescript-eslint/parser": "^4.0.0",
     "eslint-config-airbnb": "^18.2.1",
@@ -13,6 +15,8 @@
   },
   "dependencies": {
     "eslint": "^7.24.0",
+    "passport-kakao": "^1.0.1",
+    "passport-naver": "^1.0.6",
     "prettier": "^2.2.1"
   },
   "scripts": {
