CI: master 풀리퀘스트 시 calculator 테스트 CI 추가

--- a/.github/workflows/pr-check-master.yml
+++ b/.github/workflows/pr-check-master.yml
@@ -47,3 +47,9 @@ jobs:
           yarn test --watchAll=false
           yarn build
           cd -
+
+      - name: <calculator> test
+        run: |
+          cd calculator
+          yarn
+          yarn test
