--- a/.github/workflows/pr-check-master.yml
+++ b/.github/workflows/pr-check-master.yml
@@ -15,34 +15,45 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Cache yarn dependencies
-        uses: actions/cache@v1
+        uses: actions/cache@v2
         id: yarn-cache # use this to check for `cache-hit` (`steps.yarn-cache.outputs.cache-hit != 'true'`)
         with:
-          path: node_modules
+          path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
           key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
           restore-keys: |
             ${{ runner.os }}-yarn-
+
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v1
         with:
           node-version: ${{ matrix.node-version }}
+
+      - name: <client-ts> install dependencies
+        working-directory: ./client-ts
+        if: steps.yarn-cache.outputs.cache-hit != 'true'
+        run: yarn intsall
+
       - name: <client-ts> test/build-test/
-        run: |
-          cd client-ts
-          yarn
-          yarn test --watchAll=false
-          cd -
+        working-directory: ./client-ts
+        run: yarn test --watchAll=false
+
+      - name: <server> install dependencies
+        working-directory: ./server
+        if: steps.yarn-cache.outputs.cache-hit != 'true'
+        run: yarn intsall
+
       - name: <server> test/build-test/
-        run: |
-          cd server
-          yarn
-          yarn test --watchAll=false
-          cd -
+        working-directory: ./server
+        run: yarn test --watchAll=false
+
+      - name: <calculator> install dependencies
+        working-directory: ./calculator
+        if: steps.yarn-cache.outputs.cache-hit != 'true'
+        run: yarn intsall
+
       - name: <calculator> test
-        run: |
-          cd calculator
-          yarn
-          yarn test
+        working-directory: ./calculator
+        run: yarn test
 
   build:
     strategy:
@@ -69,16 +80,20 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
 
+      - name: <client-ts> install dependencies
+        working-directory: ./client-ts
+        if: steps.yarn-cache.outputs.cache-hit != 'true'
+        run: yarn install
+
       - name: <client-ts> test/build-test/
-        run: |
-          cd client-ts
-          yarn
-          yarn build
-          cd -
+        working-directory: ./client-ts
+        run: yarn build
+
+      - name: <server> install dependencies
+        working-directory: ./server
+        if: steps.yarn-cache.outputs.cache-hit != 'true'
+        run: yarn install
 
       - name: <server> test/build-test/
-        run: |
-          cd server
-          yarn
-          yarn build
-          cd -
+        working-directory: ./server
+        run: yarn build
