--- a/api/package.json
+++ b/api/package.json
@@ -32,6 +32,8 @@
     "@types/shortid": "^0.0.29",
     "axios": "^0.21.1",
     "chalk": "^4.1.1",
+    "class-transformer": "^0.4.0",
+    "class-validator": "^0.13.1",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
@@ -40,6 +42,8 @@
     "express-session": "^1.17.2",
     "helmet": "^4.6.0",
     "morgan": "^1.10.0",
+    "nanoid": "^3.1.23",
+    "nodemailer": "^6.6.1",
     "passport": "^0.4.1",
     "passport-google-oauth20": "^2.0.0",
     "passport-kakao": "^1.0.1",
@@ -64,6 +68,7 @@
     "@types/jest": "26.0.10",
     "@types/morgan": "^1.9.2",
     "@types/node": "^13.9.1",
+    "@types/nodemailer": "^6.4.2",
     "@types/passport": "^1.0.6",
     "@types/passport-google-oauth20": "^2.0.7",
     "@types/passport-kakao": "^0.2.0",
