Chore: 계산기 CI test -> coverage 모드 활성화

--- a/.github/workflows/pr-check-master.yml
+++ b/.github/workflows/pr-check-master.yml
@@ -57,7 +57,7 @@ jobs:
 
       - name: <calculator> test
         working-directory: ./calculator
-        run: yarn test
+        run: yarn test:ci --watchAll=false
 
   build:
     strategy:
