--- a/api/package.json
+++ b/api/package.json
@@ -42,6 +42,7 @@
     "express": "^4.17.1",
     "express-mysql-session": "^2.1.6",
     "express-session": "^1.17.2",
+    "geoip-lite": "^1.4.2",
     "helmet": "^4.6.0",
     "morgan": "^1.10.0",
     "nanoid": "^3.1.23",
@@ -67,6 +68,7 @@
     "@types/cors": "^2.8.10",
     "@types/express": "^4.17.11",
     "@types/express-session": "^1.17.3",
+    "@types/geoip-lite": "^1.4.1",
     "@types/jest": "26.0.10",
     "@types/morgan": "^1.9.2",
     "@types/node": "^13.9.1",
