Add: api nestjs -> creator 완료, alimtalk 완료

--- a/api/package.json
+++ b/api/package.json
@@ -38,6 +38,7 @@
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
+    "crypto-js": "^4.0.0",
     "dayjs": "^1.10.4",
     "express": "^4.17.1",
     "express-mysql-session": "^2.1.6",
