--- a/api/package.json
+++ b/api/package.json
@@ -20,9 +20,10 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "migration:create": "typeorm  migration:create -n",
+    "migration:create": "typeorm migration:create -n",
     "premigration:run": "yarn build",
-    "migration:run": "typeorm migration:run"
+    "migration:run": "typeorm migration:run",
+    "migration:revert": "typeorm migration:revert"
   },
   "dependencies": {
     "@nestjs/common": "^7.0.0",
