--- a/.github/workflows/pr-check-master.yml
+++ b/.github/workflows/pr-check-master.yml
@@ -8,7 +8,7 @@ jobs:
   test:
     strategy:
       matrix:
-        node-version: [14.x, 16.x]
+        node-version: [14.x]
     runs-on: ubuntu-latest
     steps:
       - name: Checkout source code
@@ -86,7 +86,7 @@ jobs:
   build:
     strategy:
       matrix:
-        node-version: [14.x, 16.x]
+        node-version: [14.x]
     runs-on: ubuntu-latest
     # This workflow will do a clean install of node dependencies, build the source code and run tests across different versions of node
     # For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
