--- a/api/package.json
+++ b/api/package.json
@@ -22,8 +22,8 @@
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "migration:create": "typeorm migration:create -n",
     "premigration:run": "yarn build",
-    "migration:run": "typeorm migration:run",
-    "migration:revert": "typeorm migration:revert"
+    "migration:run": "typeorm migration:run --config ./dist/setting/ormconfig.js",
+    "migration:revert": "typeorm migration:revert --ocnfig ./dist/setting/ormconfig.js"
   },
   "dependencies": {
     "@nestjs/common": "^7.0.0",
