--- a/api/package.json
+++ b/api/package.json
@@ -32,6 +32,7 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/passport": "^7.1.5",
     "@nestjs/platform-express": "^7.6.17",
+    "@nestjs/schedule": "^0.4.3",
     "@nestjs/typeorm": "^7.1.5",
     "@types/shortid": "^0.0.29",
     "aws-sdk": "^2.916.0",
