--- a/client-ts/package.json
+++ b/client-ts/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "start:mac": "PORT=3001 SKIP_PREFLIGHT_CHECK=true react-scripts start",
+    "start:mac": "PORT=3001 DISABLE_ESLINT_PLUGIN=true react-scripts start",
     "start": "set PORT=3001 && react-scripts start",
     "build": "NODE_ENV=production GENERATE_SOURCEMAP=false react-scripts build",
     "test": "react-scripts test --coverage --detectOpenHandles --forceExit --passWithNoTests",
@@ -13,16 +13,16 @@
   "dependencies": {
     "@date-io/date-fns": "^1.3.13",
     "@google/markerclusterer": "^2.0.6",
-    "@material-ui/core": "^4.11.3",
+    "@material-ui/core": "^4.11.4",
     "@material-ui/data-grid": "^4.0.0-alpha.32",
-    "@material-ui/icons": "^4.9.1",
+    "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.58",
-    "@material-ui/pickers": "^3.2.10",
+    "@material-ui/pickers": "^3.3.10",
     "aws-sdk": "^2.859.0",
     "axios": "^0.19.2",
     "chart.js": "^2.9.3",
     "chartjs-plugin-colorschemes": "^0.4.0",
-    "classnames": "^2.2.6",
+    "classnames": "^2.3.1",
     "date-fns": "^2.12.0",
     "dotenv": "^8.2.0",
     "history": "^4.10.1",
@@ -30,21 +30,21 @@
     "jquery": "^3.4.1",
     "jspdf": "^1.5.3",
     "lodash": "^4.17.21",
-    "material-table": "1.57.2",
+    "material-table": "^1.69.3",
     "moment": "^2.29.1",
     "node-sass": "4.14.1",
-    "react": "^16.12.0",
+    "react": "^17.0.2",
     "react-bootstrap": "^1.0.0-beta.16",
     "react-calendar-heatmap": "^1.8.1",
     "react-chartjs-2": "^2.9.0",
     "react-countup": "^4.3.3",
     "react-daum-postcode": "^2.0.4",
-    "react-dom": "^16.12.0",
+    "react-dom": "^17.0.2",
     "react-google-maps": "^9.4.5",
     "react-markdown": "^4.3.1",
     "react-number-format": "^4.4.1",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.0",
+    "react-scripts": "^4.0.3",
     "react-swipeable-views": "^0.13.9",
     "react-swipeable-views-utils": "^0.13.9",
     "react-tooltip": "^4.0.3",
@@ -52,7 +52,7 @@
     "recompose": "^0.30.0",
     "shortid": "^2.2.15",
     "styled-components": "^5.2.1",
-    "typescript": "3.9.7",
+    "typescript": "^4.3.4",
     "web-vitals": "^0.2.4"
   },
   "devDependencies": {
