--- a/client-ts/package.json
+++ b/client-ts/package.json
@@ -18,8 +18,9 @@
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.58",
     "@material-ui/pickers": "^3.3.10",
+    "@types/nanoid": "^3.0.0",
     "aws-sdk": "^2.859.0",
-    "axios": "^0.19.2",
+    "axios": "^0.21.1",
     "chart.js": "^2.9.3",
     "chartjs-plugin-colorschemes": "^0.4.0",
     "classnames": "^2.3.1",
@@ -32,6 +33,7 @@
     "lodash": "^4.17.21",
     "material-table": "^1.69.3",
     "moment": "^2.29.1",
+    "nanoid": "^3.1.23",
     "node-sass": "4.14.1",
     "react": "^17.0.2",
     "react-bootstrap": "^1.0.0-beta.16",
@@ -50,7 +52,6 @@
     "react-tooltip": "^4.0.3",
     "recharts": "1.8.5",
     "recompose": "^0.30.0",
-    "shortid": "^2.2.15",
     "styled-components": "^5.2.1",
     "typescript": "^4.3.4",
     "web-vitals": "^0.2.4"
@@ -70,20 +71,19 @@
     "@types/jspdf": "^1.3.3",
     "@types/lodash": "^4.14.168",
     "@types/markerclustererplus": "^2.1.33",
-    "@types/node": "^12.0.0",
-    "@types/react": "^16.9.0",
+    "@types/node": "^15.12.4",
+    "@types/react": "^17.0.11",
     "@types/react-bootstrap": "^0.32.20",
     "@types/react-calendar-heatmap": "^1.6.2",
     "@types/react-chartjs-2": "^2.5.7",
     "@types/react-countup": "^4.0.1",
-    "@types/react-dom": "^16.9.0",
+    "@types/react-dom": "^17.0.8",
     "@types/react-router-dom": "^5.1.3",
     "@types/react-swipeable-views": "^0.13.0",
     "@types/react-swipeable-views-utils": "^0.13.1",
     "@types/react-tooltip": "^3.11.0",
     "@types/recharts": "^1.8.5",
     "@types/recompose": "^0.30.7",
-    "@types/shortid": "^0.0.29",
     "@types/styled-components": "^5.1.7",
     "cra-bundle-analyzer": "^0.1.0",
     "webpack-bundle-analyzer": "^4.4.1"
