--- a/live-commerce/package.json
+++ b/live-commerce/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@types/http-errors": "^1.6.3",
     "@types/jquery": "^3.3.33",
+    "@types/mysql": "^2.15.18",
     "@types/node-schedule": "^1.3.0",
     "@types/socket.io": "^2.1.4",
     "@types/socket.io-client": "^1.4.32",
