--- a/client-ts/package.json
+++ b/client-ts/package.json
@@ -38,6 +38,7 @@
     "react-daum-postcode": "^2.0.4",
     "react-dom": "^17.0.2",
     "react-google-maps": "^9.4.5",
+    "react-hook-form": "^7.9.0",
     "react-markdown": "^4.3.1",
     "react-number-format": "^4.4.1",
     "react-router-dom": "^5.1.2",
