서비스 종료 1차 변경사항
- 신규 가입 방지
- 방송인 아프리카TV 플랫폼 추가 팝업 제거
- 모든 광고 송출 중지

--- a/client-ts/package.json
+++ b/client-ts/package.json
@@ -30,7 +30,7 @@
     "lodash": "^4.17.21",
     "material-table": "^1.69.3",
     "nanoid": "^3.1.23",
-    "node-sass": "4.14.1",
+    "node-sass": "^7.0.1",
     "notistack": "^1.0.9",
     "react": "^17.0.2",
     "react-calendar-heatmap": "^1.8.1",
